# ha-yandex-station-intents

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
custom_components/yandex_station_intents/: __init__.py  config_flow.py  const.py  diagnostics.py  entry_data.py  intent.py  manifest.json  media_player.py  services.yaml  yandex_intent.py  yandex_quasar.py  yandex_session.py
custom_components/yandex_station_intents/translations/: en.json
tests/: requirements_2023.10.txt  requirements_2023.11.txt  requirements_2023.12.txt  requirements_2023.9.txt  requirements_2024.1.txt  requirements_2024.10.txt  requirements_2024.2.txt  requirements_2024.4.txt  requirements_2024.5.txt  requirements_2024.6.txt  requirements_2024.7.txt  requirements_2024.8.txt  requirements_2024.9.txt  test_backward.py
tests/env/2024_11/: pyproject.toml
tests/env/2024_12/: pyproject.toml
tests/env/2025_1/: pyproject.toml
tests/env/2025_2/: pyproject.toml
tests/env/2025_4/: pyproject.toml
tests/env/2025_5/: pyproject.toml
tests/env/2025_6/: pyproject.toml
tests/env/2025_7/: pyproject.toml
tests/env/2026_3/: pyproject.toml
