[project]
name = "ha-yandex-station-intents"
version = "0.6.4dev"
requires-python = "~=3.13.2"
dependencies = [
    "dacite>=1.9.2",
]

[dependency-groups]
test = [
    "pytest-homeassistant-custom-component==0.13.262",
    "mypy-dev==1.17.0a2",
]
homeassistant = [
    "homeassistant==2025.7.2",
    "colorlog>=6.9.0",
]
lint = [
    "pre-commit==4.0.1",
    "ruff==0.6.9",
    "isort==5.13.2",
    "black==24.10.0",
]
tox = [
    "tox>=4.27.0",
    "tox-uv>=1.26.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
known_first_party = [
    "custom_components.yandex_station_intents",
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "T20", "Q"]

[tool.mypy]
python_version = "3.13"
follow_imports_for_stubs = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "custom_components.yandex_station.*"
ignore_errors = true

[tool.tox]
env_list = [
    "type",
    "2024_11",
    "2024_12",
    "2025_1",
    "2025_2",
    "2025_4",
    "2025_5",
    "2025_6",
    "2025_7",
]

[tool.tox.env_run_base]
description = "Run test under {env_python}"
base_python = ["py313"]
runner = "uv-venv-lock-runner"
commands = [
    ["pytest"],
]

[tool.tox.env_run_base.setenv]
PYTHONDONTWRITEBYTECODE = "1"
MYPY_CACHE_DIR = "{env_dir}/.cache/mypy"

[tool.tox.env.2024_11]
base_python = ["py312"]
uv_sync_flags = ["--directory=tests/env/2024_11"]

[tool.tox.env.2024_12]
uv_sync_flags = ["--directory=tests/env/2024_12"]

[tool.tox.env.2025_1]
uv_sync_flags = ["--directory=tests/env/2025_1"]

[tool.tox.env.2025_2]
uv_sync_flags = ["--directory=tests/env/2025_2"]

[tool.tox.env.2025_4]
uv_sync_flags = ["--directory=tests/env/2025_4"]

[tool.tox.env.2025_5]
uv_sync_flags = ["--directory=tests/env/2025_5"]

[tool.tox.env.2025_6]
uv_sync_flags = ["--directory=tests/env/2025_6"]

[tool.tox.env.2025_7]
uv_sync_flags = ["--directory=tests/env/2025_7"]

[tool.tox.env.type]
description = "Run type checks under {env_python}"
dependency_groups = ["test"]
commands = [
    ["mypy", "."],
]
